[gd_scene load_steps=13 format=3 uid="uid://cpeev13kyomwl"]

[ext_resource type="Script" path="res://Scripts/RoomLoader.gd" id="1_vpq05"]
[ext_resource type="Texture2D" uid="uid://bx01i2fg5yumw" path="res://icon.svg" id="1_yta44"]
[ext_resource type="PackedScene" uid="uid://c1356mhr7g72v" path="res://Scenes/texture_generator.tscn" id="2_hdnr2"]
[ext_resource type="Script" path="res://Scripts/RoomController.gd" id="3_htjng"]
[ext_resource type="Script" path="res://Scripts/MusicGenerator.gd" id="5_qda7y"]
[ext_resource type="PackedScene" uid="uid://1o1c7km8amq3" path="res://Scenes/door.tscn" id="6_um17j"]

[sub_resource type="NavigationMesh" id="NavigationMesh_qtd14"]
vertices = PackedVector3Array(0.25, 0.5, 4.5, 0.25, 0.5, 1.5, -0.75, 0.5, 1.25, -4.5, 0.5, 4.5, -0.75, 0.5, 0.25, 0.25, 0.5, 0, 0.25, 0.5, -4.5, -0.75, 0.5, 0.25, 0.25, 0.5, -4.5, -4.5, 0.5, -4.5, -4.5, 0.5, 4.5, -4.5, 0.5, 4.5, -0.75, 0.5, 1.25, -0.75, 0.5, 0.25, 1, 0.5, 1.25, 0.25, 0.5, 1.5, 0.25, 0.5, 4.5, 4.5, 0.5, 4.5, 1, 0.5, 0.25, 4.5, 0.5, 4.5, 4.5, 0.5, -4.5, 0.25, 0.5, -4.5, 0.25, 0.5, -4.5, 0.25, 0.5, 0, 1, 0.5, 0.25, 1, 0.5, 0.25, 1, 0.5, 1.25, 4.5, 0.5, 4.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(6, 5, 4), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 10), PackedInt32Array(13, 12, 11), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 17), PackedInt32Array(21, 20, 18), PackedInt32Array(18, 20, 19), PackedInt32Array(24, 23, 22), PackedInt32Array(27, 26, 25)]

[sub_resource type="QuadMesh" id="QuadMesh_esw8q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_owkes"]
albedo_texture = ExtResource("1_yta44")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_axmun"]
size = Vector3(1, 1, 0.3)

[sub_resource type="QuadMesh" id="QuadMesh_awru4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3v05d"]
albedo_texture = ExtResource("1_yta44")
uv1_scale = Vector3(3, 1, 3)

[node name="Room" type="Node3D" node_paths=PackedStringArray("door_px", "door_nx", "door_pz", "door_nz")]
transform = Transform3D(1, -3.13716e-22, -7.10543e-15, 2.75725e-22, 1, -1.42109e-14, 7.10543e-15, -1.51583e-28, 1, 0, 1.19209e-07, 5.68434e-14)
script = ExtResource("1_vpq05")
door_px = NodePath("DoorPX")
door_nx = NodePath("DoorNX")
door_pz = NodePath("DoorPZ")
door_nz = NodePath("DoorNZ")

[node name="RoomController" type="NavigationRegion3D" parent="." node_paths=PackedStringArray("floor", "l_wall", "music_gen")]
transform = Transform3D(1, 3.13716e-22, 7.10543e-15, -2.75726e-22, 1, 1.42109e-14, -7.10543e-15, 1.51583e-28, 1, -4.41295e-28, -1.19209e-07, -5.68434e-14)
navigation_mesh = SubResource("NavigationMesh_qtd14")
script = ExtResource("3_htjng")
room_theme = "A videogame with the theme: Jungle"
load_on_ready = true
floor = NodePath("../Floor")
l_wall = NodePath("../LeftWall")
music_gen = NodePath("../AudioStreamPlayer/MusicGenerator")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(-9, 1.35896e-06, 1.97083e-14, 2.17935e-20, -3.93402e-07, 2.986, 1.35896e-06, 9, 1.30522e-07, -0.005, 0.011, 0)
mesh = SubResource("QuadMesh_esw8q")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_owkes")

[node name="TextureGenerator" parent="Floor" instance=ExtResource("2_hdnr2")]
texture_description = "Soft soil, dirt texture, videogame asset"
load_on_ready = false

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
transform = Transform3D(1, 0, -4.23516e-22, 0, 1, -2.66454e-15, -1.69407e-21, -2.84217e-14, 1, 0, 0, -0.15)
shape = SubResource("BoxShape3D_axmun")

[node name="LeftWall" type="MeshInstance3D" parent="."]
transform = Transform3D(6.79481e-07, -3.41996e-14, 2.986, 1.35896e-06, 3, -1.85483e-21, -9, 4.52987e-07, 2.25437e-07, -4.5, 1.5, -2.4869e-14)
mesh = SubResource("QuadMesh_awru4")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3v05d")

[node name="TextureGenerator" parent="LeftWall" node_paths=PackedStringArray("extra_meshes") instance=ExtResource("2_hdnr2")]
texture_description = "Soft soil, dirt texture, videogame asset"
load_on_ready = false
extra_meshes = NodePath("../../RightWall")

[node name="StaticBody3D" type="StaticBody3D" parent="LeftWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall/StaticBody3D"]
transform = Transform3D(1, -3.55271e-15, -5.32907e-15, -1.13687e-13, 1, 0, 5.68434e-14, -2.5411e-21, 1, 0, 0, -0.15)
shape = SubResource("BoxShape3D_axmun")

[node name="RightWall" type="MeshInstance3D" parent="."]
transform = Transform3D(9, -4.52987e-07, -3.55959e-07, 1.35896e-06, 3, 8.48672e-14, 1.07288e-06, -9.66329e-14, 2.986, -3.19744e-14, 1.5, -4.5)
mesh = SubResource("QuadMesh_awru4")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3v05d")

[node name="TextureGenerator" parent="RightWall" instance=ExtResource("2_hdnr2")]
texture_description = "Soft soil, dirt texture, videogame asset"
load_on_ready = false

[node name="StaticBody3D" type="StaticBody3D" parent="RightWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall/StaticBody3D"]
transform = Transform3D(1, 0, -1.77636e-15, -2.84217e-14, 1, 0, 2.84217e-14, -1.69407e-21, 1, 0, 0, -0.15)
shape = SubResource("BoxShape3D_axmun")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="MusicGenerator" type="Node" parent="AudioStreamPlayer"]
script = ExtResource("5_qda7y")

[node name="DoorPX" parent="." instance=ExtResource("6_um17j")]
transform = Transform3D(1, -1.0776e-42, 0, 3.61112e-34, 1, 0, 0, 0, 1, 4, 0, -3.38813e-21)
offset = Vector2i(1, 0)
enabled = false

[node name="DoorNX" parent="." instance=ExtResource("6_um17j")]
transform = Transform3D(1, -1.0776e-42, 0, 3.61112e-34, 1, 0, 0, 0, 1, -4, 0, 0)
offset = Vector2i(-1, 0)
enabled = false

[node name="DoorPZ" parent="." instance=ExtResource("6_um17j")]
transform = Transform3D(1, -1.0776e-42, 0, 3.61112e-34, 1, 0, 0, 0, 1, -4.41295e-28, 0, 4)
offset = Vector2i(0, 1)
enabled = false

[node name="DoorNZ" parent="." instance=ExtResource("6_um17j")]
transform = Transform3D(1, -1.0776e-42, 0, 3.61112e-34, 1, 0, 0, 0, 1, -4.41295e-28, 0, -4)
enabled = false

[connection signal="input_event" from="Floor/StaticBody3D" to="." method="input_event_daisy"]
